@@ -97,4 +97,6 @@ and a couple of things that are different with JIT. --/
 
 /(a(?:a|b|c|d|e)b){8,16}/S++
 
+/(?:|a|){100}x/S++
+
 /-- End of testinput12 --/
